
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "node_modules",

    srcs = glob(["/".join([
            "node_modules",
            pkg,
            "**",
            ext,
    ]) for pgk in [
        "@angular",
        "jasmine",
        "typescript",
        "tslib",
        "zone.js",
        "@types",
    ] for ext in [
         "*.js",
         "*.json",
         "*.d.ts",
    ]]),
)
