package(default_visibility=["//visibility:public"])
load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//sass:sass.bzl", "sass_library", "sass_binary")


ng_module(
  name = "button",
  srcs = glob(["**/*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@ptsecurity/mosaic/button",
  assets = [":button_css"],
  tsconfig = ":tsconfig-build.json",
)


sass_binary(
  name = "button_scss",
  src = "button.scss",
  deps = [":button_scss_lib"],
)
